finally fixed the god damn stupid fucking user model
fuck you stupid fucking conflicting commits you shit rack

--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-	"name": "nodelick-api",
-	"version": "0.0.0",
-	"description": "nodelick-api",
-	"author": "bretth18",
-	"main": "server.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\"",
-		"start": "node server.js --harmony_classes",
-		"worker": "node worker.js --harmony_classes"
-	},
-	"dependencies": {
-		"nodal": "latest"
-	},
-	"engines": {
-		"node": "4.2.4"
-	},
-	"private": true
+  "name": "nodelick-api",
+  "version": "0.0.0",
+  "description": "nodelick-api",
+  "author": "bretth18",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\"",
+    "start": "node server.js --harmony_classes",
+    "worker": "node worker.js --harmony_classes"
+  },
+  "dependencies": {
+    "bcrypt": "^0.8.5",
+    "nodal": "latest"
+  },
+  "engines": {
+    "node": "4.2.4"
+  },
+  "private": true
 }
